--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ arrayvec = "0.7.4"
 bzip2-rs = { version = "0.1.2", features = ["rustc_1_51"] }
 color-eyre = "0.6.2"
 derivative = "2.2.0"
-hex = "0.4.3"
+fern = { version = "0.6.2", features = ["colored"] }
+log = "0.4.19"
 ux = "0.1.5"
 
 [profile.dev.package."*"]
